Fix cart order, change flex-direction:column per flex:wrap

--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -10,78 +10,79 @@
     }
     >div{
         display: flex;
-        flex-direction: column;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
        
         
         
     }
-    .menuCard{
-        width: 80%;
-        border-radius: 2rem;
-        background-color: white;
-        border-radius: 1rem;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.495);
-        margin-bottom: 2rem;
-        position: relative;
-        >div{
-            width: 100%;
-            background-color: $reddark;
-            height: 2.4rem;
-            border-radius: 1rem 1rem 0 0;
-            margin-bottom: 1rem;
+    // .menuCard{
+    //     width: 80%;
+    //     border-radius: 2rem;
+    //     background-color: white;
+    //     border-radius: 1rem;
+    //     box-shadow: 0 0 10px rgba(0, 0, 0, 0.495);
+    //     margin-bottom: 2rem;
+    //     position: relative;
+    //     >div{
+    //         width: 100%;
+    //         background-color: $reddark;
+    //         height: 2.4rem;
+    //         border-radius: 1rem 1rem 0 0;
+    //         margin-bottom: 1rem;
             
-        }
-        >main{
-            text-align: center;
-            >img{
-                width: 100%;
-                height: 21rem;
+    //     }
+    //     >main{
+    //         text-align: center;
+    //         >img{
+    //             width: 100%;
+    //             height: 21rem;
                 
-            }
-            >p{
-                font-size: 1.6rem;
+    //         }
+    //         >p{
+    //             font-size: 1.6rem;
                 
-                font-weight: bold;
-                margin: 1rem 0;
-                text-transform: uppercase;
-            }
-            >button{
-                width: 90%;
-                background-color: $reddark;
-                border-radius: 0.5rem;
-                border: 0.1rem solid transparent;
-                color: white;
-                padding: 1rem;
-                margin-bottom: 2rem;
-                font-weight: bold;
-                &:hover{
-                    color: $lightdark;
-                    background-color: white;
-                    border: 0.1rem solid $reddark;
-                }
-            }
+    //             font-weight: bold;
+    //             margin: 1rem 0;
+    //             text-transform: uppercase;
+    //         }
+    //         >button{
+    //             width: 90%;
+    //             background-color: $reddark;
+    //             border-radius: 0.5rem;
+    //             border: 0.1rem solid transparent;
+    //             color: white;
+    //             padding: 1rem;
+    //             margin-bottom: 2rem;
+    //             font-weight: bold;
+    //             &:hover{
+    //                 color: $lightdark;
+    //                 background-color: white;
+    //                 border: 0.1rem solid $reddark;
+    //             }
+    //         }
             
-        }
-        .item-title{
-            color: $lightdark;
-            font-weight: 500;
-        }
-        .popUp-container{
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            display: inline-block;
-            padding: 1rem;
-            font-size: 1.4rem;
-            position: absolute;
-            top: 21rem;
-            left: 10rem;            
-        }
-        .popUp-message{
-            color: $reddark;
-        }
+    //     }
+    //     .item-title{
+    //         color: $lightdark;
+    //         font-weight: 500;
+    //     }
+    //     .popUp-container{
+    //         background-color: #fff;
+    //         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    //         display: inline-block;
+    //         padding: 1rem;
+    //         font-size: 1.4rem;
+    //         position: absolute;
+    //         top: 21rem;
+    //         left: 10rem;            
+    //     }
+    //     .popUp-message{
+    //         color: $reddark;
+    //     }
        
-    }
+    // }
     
 }
+
