--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -37,6 +37,9 @@ header{
                 outline: none;
             }
         }
+        >div{
+            position: relative;
+        }
 
     }
 }
